# gdaib-ctf-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.tool-sandbox  README.md  compose.yaml  pyproject.toml  yuwang.ps1  启动御网智元.cmd
.github/: pull_request_template.md
docs/: agent-loop.md  agent-profiles.md  architecture.md  context-memory.md  deployment.md  extensions.md  learning-guide.md  model-provider.md  quickstart.md  security.md  settings.md  testing.md  tool-development.md  troubleshooting.md  upgrade.md
examples/: local_api.py
scripts/: backup.ps1  backup.sh  check-startup.ps1  check.ps1  check_dependency_locks.py  check_health_version.py  check_production_surface.py  doctor.ps1  first-setup.ps1  first-setup.sh  full-check.ps1  migrate.ps1  migrate.sh  operations-common.ps1  preflight.ps1  preflight.sh  process-record.ps1  restore.ps1  restore.sh  start.ps1  status.ps1  stop.ps1
tests/: conftest.py  fakes.py  mcp_http_server.py  mcp_test_server.py  protocol_provider_server.py  run_e2e_api.py  test_agent_engine.py  test_agent_profiles.py  test_api_integration.py  test_chat.py  test_context_memory.py  test_control_storage.py  test_ctf_tools.py  test_dispatch.py  test_domain_contracts.py  test_evaluation_cases.py  test_function_calling.py  test_health_version_check.py  test_mcp_integration.py  test_policy_tools_providers.py  test_project_cli.py  test_prompt_injection.py  test_real_provider_smoke.py  test_sandbox_runtime.py  test_settings.py  test_storage_events.py  test_success_verification.py  (+1 more)
(+149 files in other folders)
