[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yuwang-agent"
version = "0.1.0"
description = "御网智元：可审计的对话式网络安全 Agent 工作台"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "httpx>=0.27,<1",
  "python-multipart>=0.0.12,<1",
  "langgraph>=0.2,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
  "mypy>=1.13,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yuwang", "apps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --cov=src/yuwang/agent --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "E741", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
packages = ["yuwang", "apps.api"]
